# Map-Generation

./: main.ipynb  plotting_utils.py  pyproject.toml
examples/DEM/: 282D_485L_3_3.tif  38D_378R_2_3.tif  433D_629L_3_1.tif  609U_541L_3_0.tif  637U_59R_1_3.tif
examples/LULC/: 282D_485L_3_3.tif  38D_378R_2_3.tif  433D_629L_3_1.tif  609U_541L_3_0.tif  637U_59R_1_3.tif
examples/NDVI/: 282D_485L_3_3.tif  38D_378R_2_3.tif  433D_629L_3_1.tif  609U_541L_3_0.tif  637U_59R_1_3.tif
examples/S1RTC/: 282D_485L_3_3.tif  38D_378R_2_3.tif  433D_629L_3_1.tif  609U_541L_3_0.tif  637U_59R_1_3.tif
examples/S2L1C/: 282D_485L_3_3.tif  38D_378R_2_3.tif  433D_629L_3_1.tif  609U_541L_3_0.tif  637U_59R_1_3.tif
examples/S2L2A/: 282D_485L_3_3.tif  38D_378R_2_3.tif  433D_629L_3_1.tif  609U_541L_3_0.tif  637U_59R_1_3.tif
examples/S2RGB/: 282D_485L_3_3.tif  38D_378R_2_3.tif  433D_629L_3_1.tif  609U_541L_3_0.tif  637U_59R_1_3.tif
